--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,8 @@
         <br>
         <a href="/new_student">New student</a>
         <br>
+        <a href="/student_login_page">Student login</a>
+        <br>
         <a href="/student_details">Student details</a>
         <br>
         <a href="/new_teacher">New teacher</a>
