--- a/templates/student_login.html
+++ b/templates/student_login.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <form method="POST", action="initiate_student_login">
+        <form method="POST", action="student_login">
             <input name="student_email">
             <br>
             <input name="student_password">
