--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,9 @@
         <br>
         <a href="/room_details">Room details</a>
         <br>
-        <a href="/new_student">New student</a>
+        <a href="/create_student_page">New student</a>
+        <br>
+        <a href="/student_login_page">Student login</a>
         <br>
         <a href="/student_details">Student details</a>
         <br>
