--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,5 @@
 <html>
     <body>
-        <a href="/create_room">New room</a>
-        <br>
-        <a href="/rooms">Available rooms</a>
-        <br>
-        <a href="/delete_room">Delete room</a>
-        <br>
-        <a href="/room_details">Room details</a>
-        <br>
-        <a href="/create_student_page">New student</a>
-        <br>
-        <a href="/student_login_page">Student login</a>
-        <br>
-        <a href="/student_details">Student details</a>
-        <br>
-        <a href="/new_teacher">New teacher</a>
-        <br>
-        <a href="/teacher_login">Teacher login</a>
-        <br>
-        <a href="/student_under_teacher">Students under teacher</a>
+        Hello world!
     </body>
 </html>
